tests/paczka1/fuzzy1/11822788.err
Error in line 2: QS9XrV A828 38,7
Error in line 7: QS9XrV S253 75,2
Error in line 16: V7a8ZVJawOe A265 18,8
Error in line 18: QS9XrV S253 96,3
